[fix] fast-scrolling and alignment on small devices

--- a/style/style.scss
+++ b/style/style.scss
@@ -1,14 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&family=Roboto+Condensed:wght@300;400&display=swap');
+@use './include-media';
+@use 'https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&family=Roboto+Condensed:wght@300;400&display=swap';
 
 $fonts: (
-	landing-small: (1000 32px 'Poppins'),
+	landing-small: (600 20px 'Poppins'),
+	landing-medium: (600 50px 'Poppins'),
 	landing-large: (600 90px 'Poppins'),
 
-	primary-small: (600 24px 'Poppins'),
+	primary-small: (600 18px 'Poppins'),
+	primary-medium: (600 40px 'Poppins'),
 	primary-large: (600 40px 'Poppins'),
-	secondary-tiny: (500 18px 'Poppins'),
-	secondary-small: (500 24px 'Poppins'),
+
+	secondary-small: (300 20px 'Poppins'),
+	secondary-medium: (400 20px 'Poppins'),
 	secondary-large: (500 30px 'Poppins'),
+
+	text-small: (300 14px 'Poppins'),
+	text-medium: (300 14px 'Poppins'),
+	text-large: (300 14px 'Poppins'),
 
 	icons-small: (18px 'Material Icons'),
 	icons-large: (24px 'Material Icons')
@@ -44,7 +52,8 @@ $sizes: (
 }
 
 $padding: (
-	padding-small: 24px,
+	padding-tiny: 12px,
+	padding-small: 20px,
 	padding-med: 20px,
 	padding-large: 24px
 );
@@ -56,6 +65,7 @@ $padding: (
 $anim-time: 0.3s;
 $anim-type: ease-in-out;
 $border-radius: 16px;
+$breakpoints: (small: 320px, medium: 768px, large: 1024px);
 
 
 
@@ -205,6 +215,7 @@ html{
 				flex-grow: 0;
 				flex-shrink: 0;
 				scroll-snap-align: start;
+				scroll-snap-stop: always;
 				box-sizing: border-box;
 				position: relative;
 				display: grid;
@@ -240,6 +251,7 @@ html{
 					grid-row: 1/2;
 					grid-column: 1/-1;
 					padding: padding(padding-small);
+					padding-bottom: 0;
 					margin: 0;
 					background: inherit;
 				}
@@ -275,6 +287,7 @@ html{
 							grid-template-columns: 1fr;
 							padding: padding(padding-small);
 							scroll-snap-align: start;
+							scroll-snap-stop: always;
 							
 							.cardbg{
 								box-sizing: border-box;
@@ -294,7 +307,7 @@ html{
 								grid-column: 1;
 								display: flex;
 								overflow: hidden;
-								border: 4px solid color(secondary);
+								border: 2px solid color(secondary);
 								filter: drop-shadow(0 10px 10px color(shadow));
 
 								img{
@@ -309,21 +322,29 @@ html{
 								color: color(white-custom);
 								grid-row: -2/-1;
 								grid-column: 1;
-								padding: padding(padding-small);
-								font: font(secondary-tiny);
+								padding: padding(padding-tiny);
+								font: font(text-small);
 								z-index: 1;
+								// overflow: hidden;
+								line-height: 1em;
 							}
 						}
 					}
 	
 					.swipe-text{
-						display:block;
+						display:flex;
+						justify-content: center;
 						margin: 0 auto;
 						padding: 0 padding(padding-small);
 						grid-row: 2;
 						grid-column: 1;
 						fill: color(grey-custom);
 						opacity: 0.3;
+
+						img{
+							height:100%;
+							max-width: 80%;
+						}
 					}
 				}
 			
@@ -353,14 +374,15 @@ html{
 				}
 
 				ul.arrow-links{
-					padding: 0 padding(padding-small);
-					padding-top: padding(padding-small);
-					margin-left: -6px;
+					padding: padding(padding-small);
+					padding-top: 0px;
+					margin:0 0 0 -6px;
+
 					grid-column: 1/-1;
 					grid-row: 6/7;
 					display: flex;
 					flex-direction: column;
-					justify-content: flex-start;
+					justify-content: center;
 					list-style-type: none;
 					font: font(secondary-small);
 
@@ -369,7 +391,7 @@ html{
 						color: color(secondary);
 						justify-content: flex-start;
 						align-items: center;
-						margin-bottom: padding(padding-small);
+						margin-bottom: 0;
 
 						&::before{
 							display: inline-block;
@@ -391,13 +413,13 @@ html{
 
 					.svg-container{
 						display: flex;
+						padding-top: padding(padding-small);
 						justify-content: center;
 						align-items: flex-start;
 						position: absolute;
 						height:100%;
 						width: 100%;
 						overflow:hidden;
-						// mask-image: linear-gradient(transparent, transparent, rgba(0,0,0,1.0),  rgba(0,0,0,1.0),  rgba(0,0,0,1.0));
 
 						svg.svgbg{
 							flex-shrink: 0;
@@ -411,10 +433,10 @@ html{
 								fill: color(secondary);
 							}
 						}
-
 					}
 					
 					.button{
+						box-sizing: border-box;
 						padding: padding(padding-small);
 						font: font(primary-small);
 						background: color(bg-item);
@@ -436,8 +458,6 @@ html{
 				.footer{
 					grid-row: -2/-1;
 					grid-column: 1/-1;
-					// background: color(bg-darker);
-					// border-top: 4px solid color(primary);
 					z-index: 1;
 					display: grid;
 					grid-template-rows: repeat(3, 1fr);
@@ -467,7 +487,7 @@ html{
 								color:color(white-custom);
 								height: 100%;
 								transition: $anim-time $anim-type;
-								font-size: xx-large;
+								font-size: x-large;
 								padding: padding(padding-small) 0 padding(padding-small) padding(padding-small);
 
 								&:last-child{
